2017-08-07  Martin Liska  <mliska@suse.cz>

	* attribs.h (canonicalize_attr_name): New function.
	(cmp_attribs): Move from c-format.c and adjusted.
	(is_attribute_p): Moved from tree.h.
	* tree-inline.c: Add new includes.
	* tree.c (cmp_attrib_identifiers): Use cmp_attribs.
	(private_is_attribute_p): Remove.
	(private_lookup_attribute): Likewise.
	(private_lookup_attribute_by_prefix): Simplify.
	(remove_attribute): Use is_attribute_p.
	* tree.h: Remove removed declarations.

2017-08-07  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/81698
	* stmt.c (emit_case_dispatch_table): Add DEFAULT_EDGE argument,
	instead of computing it in the function.  Formatting fix.
	(expand_case): Don't rely on default_edge being the first edge,
	clear it if removing it, pass default_edge to
	emit_case_dispatch_table.
	(expand_sjlj_dispatch_table): Pass NULL as DEFAULT_EDGE, formatting
	fix.

2017-08-06  Uros Bizjak  <ubizjak@gmail.com>

	* config/alpha/alpha.c (alpha_reorg): If trap is the last active
	insn in the function, emit NOP after the insn.

2017-08-06  Tom de Vries  <tom@codesourcery.com>

	* omp-expand.c (expand_oacc_for): Add missing edge probability for tile
	and element loops.

2017-08-06  Tom de Vries  <tom@codesourcery.com>

	* omp-expand.c (expand_oacc_for): Add missing edge probability for chunk
	loop.

2017-08-04  Yury Gribov  <tetra2005@gmail.com>

	PR tree-optimization/57371
	* match.pd: New pattern.

2017-08-04  Marek Polacek  <polacek@redhat.com>

	PR middle-end/81695
	* fold-const.c (fold_indirect_ref_1): For ((int *)&a + 4 -> a[1],
	perform the computation in offset_int.

2017-08-04  Richard Sandiford  <richard.sandiford@linaro.org>

	PR tree-optimization/81136
	* tree-vectorizer.h: Include tree-hash-traits.h.
	(vec_base_alignments): New typedef.
	(vec_info): Add a base_alignments field.
	(vect_record_base_alignments): Declare.
	* tree-data-ref.h (data_reference): Add an is_conditional_in_stmt
	field.
	(DR_IS_CONDITIONAL_IN_STMT): New macro.